@@ -170,6 +170,7 @@
      list SSH2 ciphers
  - (bal) Put HAVE_PW_CLASS_IN_PASSWD back into pwcopy()
  - (bal) Fix up logging since it changed.  removed log-*.c
+ - (djm) Fix up LOG_AUTHPRIV for systems that have it
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
@@ -4362,4 +4363,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.905 2001/03/05 08:16:54 mouring Exp $
+$Id: ChangeLog,v 1.906 2001/03/05 10:23:31 djm Exp $
